fix footer z-index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -200,7 +200,7 @@ table#list_table>thead {
   height: 60px;
   background-color: black;
   color: gray;
-  z-index: 1;
+  z-index: 99;
 }
 #footerlink {
     margin-top: 20px;
